# testspace-colab

./: .buildinfo  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  authors.html  codespaces.html  contributing.html  genindex.html  history.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  todos.html  tox.ini  usage.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish_docs.yml  test_distribution.yml
_modules/: index.html
_modules/testspace_colab/: cli.html  client.html  elk.html  lib.html  trove.html  ts_log.html  utils.html
_sources/: index.rst.txt  installation.rst.txt  links.rst.txt  todos.rst.txt
_sources/autogen/: testspace_colab.client.rst.txt  testspace_colab.rst.txt
_sources/jupyter/: index.rst.txt
_static/: icon.ico2
autogen/: testspace_colab.client.html  testspace_colab.html
docs/: Makefile  conf.py  index.rst  installation.rst  links.rst  make.bat  modules.rst  testspace_colab.client.rst  testspace_colab.rst  testspace_utils.client.rst  testspace_utils.rst  usage.rst
docs/_static/: pytest_sample.tgz  pytest_sample_result.xml
docs/jupyter/: index.rst
jupyter/: index.html
jupyter/examples/: index.html
notebooks/: data_sets.ipynb  simple_example.ipynb  trove-example.ipynb
notebooks/examples/: API.ipynb  util.py  (+5 more)
tests/: conftest.py  test_cli.py  test_client.py  test_elk.py  test_testspace_utils.py  test_trove.py
(+19 files in other folders)
