[metadata]
name = testspace-colab
description = A set of utililities to interact with Testspace.
long_description = file: README.rst
url = https://github.com/lbrack/testspace_colab

author = Laurent Brack
author_email = laurent.brack@gmail.com
license = MIT
license_files = LICENSE
keywords = testspace, utils
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

platforms =  windows, macos, linux

[options]

setup_requires = setuptools_scm

include_package_data = yes
zip_safe = no
package_dir =
    =src
packages = find:
install_requires =
    # your dependencies here
    testspace-python
    Click
    rich
    pyyaml
    jsonpath-ng
    docker
    elasticsearch>=7.6.0,<8.0.0
    eland>=7.6.0,<8.0.0
    jupyterlab
    
python_requires = >=3.5

[options.entry_points]
console_scripts =
    ts-colab = testspace_colab.cli:main


[options.extras_require]
doc =
    sphinx
    sphinx-autorun
    sphinx-rtd-theme
test =
    pytest
    pytest-mock
    pytest-cov
    flake8
    tox
    coverage

[options.packages.find]
where = src

[check-manifest]
ignore =
  VERSION.txt


[devpi:upload]
formats = sdist.tgz

